<resources>
    <string name="app_name">IlFornoApp</string>
    <string name="login">LOGIN</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registro">REGISTRO</string>
    <string name="digite_su_correo_electronico">Digite su correo electrónico</string>
    <string name="ingrese_una_contrase_a">Ingrese una contraseña</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="g_nero">Género</string>
    <string name="ciudad_de_residencia">Ciudad de residencia</string>
    <string name="registrar_datos">Registrar datos</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="digite_su_nombre">Digite su nombre</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="bienvenido">Bienvenido!!</string>
    <string name="su_nombre_de_usuario_es">Su nombre de usuario es:</string>
    <string name="su_contrase_a_es">Su contraseña es:</string>
    <string name="correo_electronico1">CORREO ELECTRONICO: *</string>
    <string name="contrase_a1">CONTRASEÑA: *</string>
    <string name="ingresar1">Ingresar</string>
    <string name="crear_cuenta1">/ Crear cuenta</string>
    <string name="politica">Tus datos personales se utilizarán para respaldar tu experiencia en esta app, para administrar el acceso a tu cuenta y para otros fines descritos en nuestra política de privacidad.</string>

    <string-array name="Ciudades">
        <item>Medellín</item>
        <item>Bogotá</item>
        <item>Cali</item>
        <item>Manizales</item>

    </string-array>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_carta">Carta</string>
    <string name="menu_restaurante">Restaurante</string>
    <string name="menu_cupones">Cupones</string>
    <string name="menu_pedidos">Pedidos online</string>
    <string name="menu_recoger">Recoger en tienda</string>
    <string name="menu_ayuda">Ayúdanos a mejorar</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_configuracion">Configuración</string>
    <string name="menu_inicio">Inicio</string>
    <string name="title_activity_menu_tab">Menu</string>
    <string name="title_entradas">Entradas</string>
    <string name="title_fuertes">Platos fuertes</string>
    <string name="title_postres">Postres y bebidas</string>
    <string name="error_usg_login">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="olvide_mi_contrase_a">Olvide mi contraseña</string>
    <string name="email_de_recuperacion">Email de recuperacion</string>
    <string name="recuperar_password">Recuperar contraseña</string>
    <string name="nombre_restaurante">Nombre restaurante</string>
    <string name="direccion_del_restaurante">Direccion del restaurante</string>
    <string name="telefono_del_restaurante">Telefono del restaurante</string>
    <string name="nombrerestaurante">Nombre Restaurante</string>
    <string name="direccion">Direccion</string>
    <string name="telefono">Telefono</string>
    <string name="nombre_del_plato">Nombre del plato</string>
    <string name="descripcion">Descripcion</string>
    <string name="precio">Precio</string>
    <string name="nombre">Nombre</string>
    <string name="title_activity_maps">Map</string>
    <string name="perfil">Perfil</string>
    <string name="nombre_de_usuario">Nombre de usuario registrado</string>
    <string name="contrase_a_registrada">Contraseña registrada</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="ciudad_de_residencia_registrada">Ciudad de residencia registrada</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="bienvenidooo">Bienvenido! Aquí podras editar toda la configuración que tienes como usuario</string>
    <string name="editar_nombre_de_usuario">Editar nombre de usuario</string>
    <string name="nuevo_nombre">Nuevo nombre</string>
    <string name="editar_correo_electr_nico">Editar correo electrónico</string>
    <string name="nuevo_correo_electr_nico">Nuevo correo electrónico</string>
    <string name="editar_ciudad_de_residencia">Editar ciudad de residencia</string>
    <string name="cambiar_foto_de_perfil">Cambiar foto de perfil</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="nota_cupones">Estos son los cupones disponibles para este mes, recuerda que solo puedes redimir uno por pedido</string>
    <string name="redimir_cupon_1">Codigo de descuento</string>
    <string name="redimir_cupon_2">Codigo de dsscuento</string>
    <string name="cupon1">Cupon 1: Redimible por compras superiores a $40.000</string>
    <string name="cupon2">Cupon2: redimible por compras superiores a $80.000</string>
    <string name="cumple">Recuerda que el dia de tu cumpleaños tienes derecho a reclamar tu postre gratis, al finalizar tu pedido déjanos un comentario con la foto de tu cédula o presentar tu cédula en el restaurante al reclamar tu orde</string>
    <string name="actualmente_en_el_carrito">Actualmente en el carrito</string>
    <string name="total">Total:</string>
    <string name="domicilio">Domicilio</string>
    <string name="recoger_en_tienda">Recoger en tienda</string>
    <string name="recoger_en_restaurante">Recoger en restaurante</string>
    <string name="recogerr">Paso 1: Selecciona el restaurante y la hora a la que deseas recoger tu pedido \nPaso 2: Ingresa tus datos personales. \nPaso 3: Recoge el pedido con tu nombre completo y numero de factura en el restaurante seleccionado.</string>
    <string name="nombre_de_quien_realiza_el_pedido">Nombre de quien realiza el pedido</string>
    <string name="seleccione_el_restaurante">Seleccione el restaurante</string>
    <string name="n_mero_de_documento_de_quien_realiza_el_pedido">Número de documento de quien realiza el pedido</string>
    <string name="documento_no">Documento Nro.</string>
    <string name="hora_a_la_cual_desea_recoger_el_pedido_m_n_1_hora_de_espera">Hora a la cual desea recoger el pedido (mín. 1 hora de espera)</string>
    <string name="nro_de_factura">Nro. de factura: </string>
    <string name="ay_danos_a_mejorar">Ayúdanos a mejorar!</string>
    <string name="recomendacion">Escriba aquí su recomendación. \n\nEn caso de tener alguna queja o reclamo también puede dejarla por este medio. \n\nAgradecemos su colaboración.</string>
    <string name="enter">\n\n\n\n\n\n\n\n</string>
    <string name="enviar_recomendaci_n">Enviar recomendación</string>
    <string name="ingresar_c_digo_de_descuento">Ingresar código de descuento:</string>
    <string name="domicilios">Domicilios</string>
    <string name="ingrese_la_direcci_n_de_env_o">Ingrese la dirección de envío</string>
    <string name="dir">Dir:</string>
    <string name="pago_con_tarjeta">Pago con tarjeta</string>
    <string name="pago_en_efectivo">Pago en efectivo</string>
    <string name="men">Menú</string>
    <string name="restaurantes">Restaurantes</string>
    <string name="cupones">Cupones</string>
    <string name="postres">Postres</string>
    <string name="platos_fuertes">Platos fuertes</string>
    <string name="entradas">Entradas</string>
    <string name="id_de_usuario">Id de usuario</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="recuperar_contrase_a">Recuperar contraseña</string>
    <string name="ingrese_correo_electr_nico_de_recuperaci_n">Ingrese correo electrónico de recuperación</string>
    <string name="ingrese_contrase_a">Ingrese contraseña</string>
    <string name="ingrese_contrase_a_nueva_o_mantenga_la_misma">ingrese contraseña nueva o mantenga la misma</string>
    <string name="se_debe_actualizar_la_contrase_a_para_cambiar_su_email">Se debe actualizar la contraseña para cambiar su email</string>
    <string name="nombre_registrado">Nombre registrado</string>
    <string name="aplicar_cupon">Aplicar cupon</string>
    <string name="aplicar">Aplicar</string>
    <string name="cantidad">Cantidad</string>
    <string name="_1">1</string>


    <string-array name="Cantidad">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="Restaurantes">
        <item>Cc Mayorca</item>
        <item>Cc Viva Envigado</item>
        <item>Cc El Tesoro</item>
        <item>Cc Santa fe</item>
        <item>Mall Villagrande</item>
        <item>Mall San Lucas</item>
        <item>Il forno Parque Lleras</item>
        <item>Il forno viva palmas</item>
    </string-array>
</resources>