<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/estecontainer2"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">

<TextView
    android:id="@+id/text_recoger"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:text="@string/recoger_en_restaurante"
    android:textSize="25sp"
    android:textColor="@color/black"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="8dp"
    android:textSize="15dp"
    android:text="@string/recogerr"/>

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="25dp"
    android:layout_marginEnd="8dp"
    android:textSize="15dp"
    android:text="@string/seleccione_el_restaurante" />

<Spinner
    android:id="@+id/sp_restaurante"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:entries="@array/Restaurantes"
    android:layout_marginTop="5dp"/>

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="15dp"
    android:layout_marginEnd="8dp"
    android:textSize="15dp"
    android:text="@string/nombre_de_quien_realiza_el_pedido" />

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="8dp"
    android:textSize="15dp"
    android:hint="@string/nombre"
    android:id="@+id/et_nombre_pedido2"/>

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="15dp"
    android:layout_marginEnd="8dp"
    android:textSize="15dp"
    android:text="@string/numero_de_telefono_de_quien_realiza_el_pedido" />

<EditText
    android:id="@+id/et_telefono2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="8dp"
    android:textSize="15dp"
    android:inputType="number"
    android:hint="@string/telefono" />

<Button
    android:id="@+id/bt_enviar_pedido2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginTop="25dp"
    android:text="Enviar pedido"
    android:background="@color/ilfornobuttom"
    style="@style/margin"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/text_perfil" />

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="25dp"
    android:layout_marginEnd="8dp"
    android:textSize="15dp"
    android:text="@string/nro_de_factura" />

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="8dp"
    android:textSize="25dp"
    android:textColor="@color/black"
    android:hint="@string/nro_de_factura"
    android:id="@+id/tv_factura"/>

</LinearLayout>